--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,55 @@
-argparse
-httpx
-requests
-bs4
-asyncio
-holehe
-fastapi
-uvicorn
-pydantic[email] 
-telethon
-dotenv
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.13
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.9.0
+asyncio==3.4.3
+attrs==25.3.0
+beautifulsoup4==4.13.4
+bs4==0.0.2
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.2.1
+colorama==0.4.6
+distro==1.9.0
+dnspython==2.7.0
+dotenv==0.9.9
+email_validator==2.2.0
+fastapi==0.115.12
+frozenlist==1.7.0
+gunicorn==23.0.0
+h11==0.16.0
+holehe==1.61
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+Jinja2==3.1.6
+jiter==0.10.0
+MarkupSafe==3.0.2
+multidict==6.5.0
+openai==1.82.1
+outcome==1.3.0.post0
+packaging==25.0
+pdfkit==1.0.0
+propcache==0.3.2
+pyaes==1.6.1
+pyasn1==0.6.1
+pydantic==2.11.5
+pydantic_core==2.33.2
+python-dotenv==1.1.0
+requests==2.32.3
+rsa==4.9.1
+sniffio==1.3.1
+socialscan==2.0.1
+sortedcontainers==2.4.0
+soupsieve==2.7
+starlette==0.46.2
+Telethon==1.40.0
+termcolor==3.1.0
+tqdm==4.67.1
+trio==0.30.0
+typing-inspection==0.4.1
+typing_extensions==4.13.2
+urllib3==2.4.0
+uvicorn==0.34.2
+yarl==1.20.1
